--- a/module/Application/Backend/view/layout/layout.phtml
+++ b/module/Application/Backend/view/layout/layout.phtml
@@ -1,4 +1,5 @@
 <?php echo $this->doctype(); ?>
+
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -25,8 +26,7 @@
 
     </head>
     <body>
-        <?php echo $this->navigation('navigation')->menu()->setUlClass('navbar navbar-inverse navbar-fixed-top');?>
-<!--        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,15 +34,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php //echo $this->url('home') ?>"><img src="<?php //echo //$this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php //echo $this->translate('Skeleton Application') ?></a>
+                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php //echo $this->url('home') ?>"><?php //echo $this->translate('Home') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
                     </ul>
-                </div>/.nav-collapse 
+                </div><!--/.nav-collapse -->
             </div>
-        </nav>-->
+        </nav>
         <div class="container">
             <?php echo $this->content; ?>
             <hr>
