some thing to update

--- a/module/Application/view/layout/frontend.phtml
+++ b/module/Application/view/layout/frontend.phtml
@@ -68,7 +68,7 @@
             
             <div class="row">
                 <div class="col-sm-12 col-xs-12" id="navigation">
-                    <?php echo $this->navigation('navigation')->menu()->setPartial('frontend/partials/menu.phtml')->setUlClass('navigation-bar'); ?>
+                    <?php echo $this->navigation('navigation')->menu()->setUlClass('navigation-bar'); ?>
                 </div>
             </div>
             <?php echo $this->content; ?>
