--- a/module/Application/template/frontend/video/layout.phtml
+++ b/module/Application/template/frontend/video/layout.phtml
@@ -1,4 +1,5 @@
 <?php echo $this->doctype(); ?>
+
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -25,7 +26,6 @@
 
     </head>
     <body>
-        <?php echo $this->navigation('navigation')->menu()->setUlClass('navbar navbar-inverse navbar-fixed-top');?>
 <!--        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php //echo $this->url('home') ?>"><img src="<?php //echo //$this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php //echo $this->translate('Skeleton Application') ?></a>
+                    <a class="navbar-brand" href="<?php //echo $this->url('home') ?>"><img src="<?php //echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php //echo $this->translate('Skeleton Application') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
